Ok, I did too much that I didnt actually push, oops

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,5 @@
-
-# eclipse
-bin
-*.launch
-.settings
-.metadata
-.classpath
-.project
-
-# idea
-out
-*.ipr
-*.iws
-*.iml
-.idea/
-
-# vscode
-.vscode
-
-# gradle
 build
 .gradle
-
-# other
-eclipse
 run
-run_server
-logs
-
-# Files from Forge MDK
-forge*changelog.txt
-
-# Files generated for Fabric
-/fabric/src/generated/
-/.architectury-transformer/debug.log
+.idea
+.kotlin
