--- a/gradle.properties
+++ b/gradle.properties
@@ -1,41 +1,36 @@
 # Done to increase the memory available to Gradle.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
-
-# Meta dependency
-kotlin_version=2.0.0
 
 # Mod properties
 mod_version = 2.0.0
-mod_id = hexxyskies
-mod_name = Hexxy Skies
-mod_description = Hexcasting x Valkyrien Skies Integration
-license = MIT
-mod_source = https://github.com/TechTastic/hexsky
 maven_group = io.github.techtastic
-archives_base_name = hexxyskies
+archives_name = hexxyskies
 enabled_platforms = fabric,forge
 
 # Minecraft properties
 minecraft_version = 1.20.1
 
 # Dependencies
-architectury_api_version = 9.1.12
-fabric_loader_version = 0.14.24
-fabric_api_version = 0.90.7+1.20.1
-forge_version = 47.4.10
+architectury_api_version = 9.2.14
+fabric_loader_version = 0.18.4
+fabric_api_version = 0.92.6+1.20.1
+forge_version = 1.20.1-47.4.10
 
-# VS dependencies
-vs2_version=2.4.0+d4ff79996b
+vs2_version=2.4.0
 vscore_version=1.1.0+2519aeb564
 
-# Kotlin platform dependencies
-kotlin_forge=4.11.0
-kotlin_fabric=1.11.0+kotlin.2.0.0
-
-# Hexcasting dependencies
 hexcasting_version = 0.11.3
 paucal_version = 0.6.0-pre-118
 patchouli_version = 84
 inline_version = 1.0.1
 cloth_config_version = 11.1.118
+
+moreiotas_version = 0.1.1
+complexhex_version = 0.1.3-beta
+hexstruction_version = 7406729
+hexal_version = 0.3.1
+#hexpose_version = 1.0.0
+hexodus_version = 1.0.0
+gravity_changer_version = 1.1.2
+cca_version = 5.2.3
