--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,19 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    id 'dev.architectury.loom' version '1.3.355' apply false
-    id 'architectury-plugin' version '3.4.146'
-    id "org.jetbrains.kotlin.jvm" version "$kotlin_version" apply false
-
-    id 'com.matthewprenger.cursegradle' version '1.4.0' apply false
-    id "com.modrinth.minotaur" version "2.4.5" apply false
+    id 'dev.architectury.loom' version '1.9-SNAPSHOT' apply false
+    id 'architectury-plugin' version '3.4-SNAPSHOT'
+    id 'com.gradleup.shadow' version '8.3.6' apply false
+    id "org.jetbrains.kotlin.jvm" version "2.0.0" apply false
 }
-
-version = mod_version
 
 architectury {
     minecraft = project.minecraft_version
 }
 
 allprojects {
-    apply plugin: "java"
-    apply plugin: "kotlin"
-    apply plugin: "architectury-plugin"
-    apply plugin: "maven-publish"
-
-    archivesBaseName = rootProject.archives_base_name
-    version = rootProject.version
-    group = rootProject.maven_group
-
-    // Copied from VS oddities. Forces arch to use the right version (which it doesn't for some reason on some machines)
-    configurations.configureEach {
-        resolutionStrategy.force "org.lwjgl:lwjgl-stb:3.3.1"
-        resolutionStrategy.force "org.lwjgl:lwjgl-opengl:3.3.1"
-        resolutionStrategy.force "org.lwjgl:lwjgl-openal:3.3.1"
-        resolutionStrategy.force "org.lwjgl:lwjgl-tinyfd:3.3.1"
-        resolutionStrategy.force "org.lwjgl:lwjgl-jemalloc:3.3.1"
-        resolutionStrategy.force "org.lwjgl:lwjgl-glfw:3.3.1"
-        resolutionStrategy.force "org.lwjgl:lwjgl:3.3.1"
-    }
-
     repositories {
-        //Add any repositories to fetch dependencies from here.
-        //Most dependencies are mirrored to the VS Maven, so by default only it is included alongside mavenLocal and KFF.
-        mavenLocal()
-
+        mavenCentral()
         maven {
             url = "https://maven.blamejared.com"
         }
@@ -53,38 +26,39 @@ allprojects {
         maven {
             url = "https://api.modrinth.com/maven"
         }
-
+        maven {
+            url "https://cursemaven.com"
+            content {
+                includeGroup "curse.maven"
+            }
+        }
         maven {
             name = "Valkyrien Skies Internal"
             url = 'https://maven.valkyrienskies.org'
         }
     }
 
-    java {
-        withSourcesJar()
-    }
-
-    tasks.withType(JavaCompile).configureEach {
-        options.encoding = "UTF-8"
-
-        options.release = 17
-    }
-
-    tasks.withType(KotlinJvmCompile).configureEach {
-        kotlinOptions {
-            jvmTarget = "17"
-            freeCompilerArgs += "-Xjvm-default=all"
-
-        }
-    }
+    group = rootProject.maven_group
+    version = rootProject.mod_version
 }
 
 subprojects {
     apply plugin: 'dev.architectury.loom'
-    apply plugin: "org.jetbrains.kotlin.jvm"
+    apply plugin: 'architectury-plugin'
+    apply plugin: 'maven-publish'
+    apply plugin: 'kotlin'
+
+    base {
+        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
+        archivesName = "$rootProject.archives_name-$project.name"
+    }
 
     repositories {
-        //Add repositories here if necessary.
+        // Add repositories to retrieve artifacts from in here.
+        // You should only use this when depending on other mods because
+        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
+        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
+        // for more information about repositories.
     }
 
     loom {
@@ -94,5 +68,44 @@ subprojects {
     dependencies {
         minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
         mappings loom.officialMojangMappings()
+    }
+
+    java {
+        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
+        // if it is present.
+        // If you remove this line, sources will not be generated.
+        withSourcesJar()
+
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+
+    tasks.withType(JavaCompile).configureEach {
+        it.options.release = 17
+    }
+
+    tasks.withType(KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "17"
+            freeCompilerArgs += "-Xjvm-default=all"
+        }
+    }
+
+    // Configure Maven publishing.
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                artifactId = base.archivesName.get()
+                from components.java
+            }
+        }
+
+        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
+        repositories {
+            // Add repositories to publish to here.
+            // Notice: This block does NOT have the same function as the block in the top level.
+            // The repositories here will be used for publishing your artifact, not for
+            // retrieving dependencies.
+        }
     }
 }
