--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,40 +2,56 @@ architectury {
     common rootProject.enabled_platforms.split(',')
 }
 
-loom {
-    accessWidenerPath = file("src/main/resources/hexxyskies.accesswidener")
+repositories {
+    maven {
+        url = 'https://jitpack.io'
+    }
+    maven {
+        name = 'Ladysnake Mods'
+        url = 'https://maven.ladysnake.org/releases'
+    }
 }
 
 dependencies {
     // We depend on Fabric Loader here to use the Fabric @Environment annotations,
     // which get remapped to the correct annotations on each platform.
     // Do NOT use other classes from Fabric Loader.
-    modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
-
-    implementation(("io.github.llamalad7:mixinextras-common:0.4.1"))
+    modImplementation "net.fabricmc:fabric-loader:$fabric_loader_version"
 
     // Architectury API. This is optional, and you can comment it out if you don't need it.
-    modImplementation "dev.architectury:architectury:$rootProject.architectury_api_version"
+    modImplementation "dev.architectury:architectury:$architectury_api_version"
 
-    modApi("org.valkyrienskies:valkyrienskies-120-common:${rootProject.vs2_version}") {
+    implementation("io.github.llamalad7:mixinextras-common:0.4.1")
+
+    modApi("org.valkyrienskies:valkyrienskies-120-common:$vs2_version") {
         exclude group: "com.simibubi"
         exclude group: "io.github.fabricators_of_create"
         exclude group: "dev.engine-room"
         exclude group: "dev.engine_room"
     }
-    implementation("org.valkyrienskies.core:api:${rootProject.vscore_version}") {
+    implementation("org.valkyrienskies.core:api:$vscore_version") {
         exclude group: 'org.joml', module: ''
     }
-    implementation("org.valkyrienskies.core:impl:${rootProject.vscore_version}") {
+    implementation("org.valkyrienskies.core:impl:$vscore_version") {
         exclude group: 'org.joml', module: ''
     }
-    implementation("org.valkyrienskies.core:internal:${rootProject.vscore_version}") {
+    implementation("org.valkyrienskies.core:internal:$vscore_version") {
         exclude group: 'org.joml', module: ''
     }
 
     implementation("org.joml:joml-primitives:1.10.0")
     implementation("org.joml:joml:1.10.4")
 
-    modCompileOnly "vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}-FABRIC"
-    modCompileOnly "at.petra-k.hexcasting:hexcasting-common-${minecraft_version}:${hexcasting_version}"
+    modCompileOnly "vazkii.patchouli:Patchouli:$minecraft_version-$patchouli_version-FABRIC"
+    modCompileOnly "at.petra-k.hexcasting:hexcasting-common-$minecraft_version:$hexcasting_version"
+
+    modCompileOnly("ram.talia.moreiotas:moreiotas-common-$minecraft_version:$moreiotas_version") { transitive = false }
+    compileOnly group: "org.jblas", name: "jblas", version: "1.2.5"
+    modCompileOnly("maven.modrinth:complex-hex:$complexhex_version")
+    modCompileOnly("curse.maven:hexstructuction-1283004:$hexstruction_version")
+    modCompileOnly("ram.talia.hexal:hexal-common-$minecraft_version:$hexal_version") { transitive = false }
+    modCompileOnly files("${rootProject.rootDir}/libs/hexical-2.0.0-e0d7ef9.jar")
+    modCompileOnly("maven.modrinth:hexodus:$hexodus_version")
+    modCompileOnly("com.github.qouteall:GravityChanger:v$gravity_changer_version-mc$minecraft_version") { transitive = false }
+    modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-api:$cca_version"
 }
