--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,7 +1,5 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "7.1.2"
-    id "com.matthewprenger.cursegradle"
-    id "com.modrinth.minotaur"
+    id 'com.gradleup.shadow'
 }
 
 architectury {
@@ -10,11 +8,20 @@ architectury {
 }
 
 configurations {
-    common
-    shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
+    common {
+        canBeResolved = true
+        canBeConsumed = false
+    }
     compileClasspath.extendsFrom common
     runtimeClasspath.extendsFrom common
     developmentFabric.extendsFrom common
+
+    // Files in this configuration will be bundled into your mod using the Shadow plugin.
+    // Don't use the `shadow` configuration from the plugin itself as it's meant for excluding files.
+    shadowBundle {
+        canBeResolved = true
+        canBeConsumed = false
+    }
 }
 
 repositories {
@@ -38,18 +45,20 @@ repositories {
 }
 
 dependencies {
-    modImplementation("net.fabricmc:fabric-loader:${fabric_loader_version}")
-    common(project(path: ":common", configuration: "namedElements")) { transitive = false }
-    shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive = false }
+    modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
 
-    // dependencies
-    modImplementation("net.fabricmc.fabric-api:fabric-api:${fabric_api_version}")
+    // Fabric API. This is technically optional, but you probably want it anyway.
+    modImplementation "net.fabricmc.fabric-api:fabric-api:$fabric_api_version"
+
+    // Architectury API. This is optional, and you can comment it out if you don't need it.
+    modImplementation "dev.architectury:architectury-fabric:$architectury_api_version"
+
     include(annotationProcessor(implementation("io.github.llamalad7:mixinextras-fabric:0.4.1")))
 
-    include(modApi("dev.architectury:architectury-fabric:${rootProject.architectury_api_version}"))
+    common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
+    shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
 
-    //VS2
-    modCompileOnly("org.valkyrienskies:valkyrienskies-120-fabric:${rootProject.vs2_version}") {
+    modImplementation("org.valkyrienskies:valkyrienskies-120-fabric:$vs2_version") {
         exclude group: "com.simibubi.create"
         exclude group: "net.createmod.ponder"
         // Excluding sodium since it crashes with vs2 for some reason
@@ -58,19 +67,18 @@ dependencies {
         exclude group: "com.tterrag.registrate_fabric"
         exclude group: "dev.engine-room.flywheel"
     }
-    implementation("org.valkyrienskies.core:api:${rootProject.vscore_version}") {
+    implementation("org.valkyrienskies.core:api:$vscore_version") {
         exclude group: 'org.joml', module: ''
     }
-    implementation("org.valkyrienskies.core:util:${rootProject.vscore_version}") {
+    implementation("org.valkyrienskies.core:util:$vscore_version") {
         exclude group: 'org.joml', module: ''
     }
-    implementation("org.valkyrienskies.core:internal:${rootProject.vscore_version}") {
+    implementation("org.valkyrienskies.core:internal:$vscore_version") {
         exclude group: 'org.joml', module: ''
     }
-    modRuntimeOnly files("${rootDir}\\libs\\valkyrienskies-120-fabric-2.4.0+ab9d3d62ee.jar")
 
     // Kotlin
-    modImplementation("net.fabricmc:fabric-language-kotlin:${rootProject.kotlin_fabric}")
+    modImplementation("net.fabricmc:fabric-language-kotlin:$kotlin_version")
 
     api "org.jetbrains.kotlin:kotlin-stdlib:2.0.0"
     api "org.jetbrains.kotlin:kotlin-reflect:2.0.0"
@@ -79,80 +87,42 @@ dependencies {
     implementation("org.joml:joml-primitives:1.10.0")
     implementation("org.joml:joml:1.10.4")
 
-    modImplementation "vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}-FABRIC"
-    modImplementation "at.petra-k.hexcasting:hexcasting-fabric-${minecraft_version}:${hexcasting_version}"
-    modRuntimeOnly "at.petra-k.paucal:paucal-fabric-${minecraft_version}:${paucal_version}"
+    modImplementation "vazkii.patchouli:Patchouli:$minecraft_version-$patchouli_version-FABRIC"
+    modImplementation "at.petra-k.hexcasting:hexcasting-fabric-$minecraft_version:$hexcasting_version"
+    modRuntimeOnly "at.petra-k.paucal:paucal-fabric-$minecraft_version:$paucal_version"
     modRuntimeOnly "com.samsthenerd.inline:inline-fabric:$minecraft_version-$inline_version"
-    modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-api:${cca_version}"
+    modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-api:$cca_version"
     modRuntimeOnly "io.github.tropheusj:serialization-hooks:0.4.99999"
-    modImplementation("software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}")
-    modImplementation("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") {
+    modImplementation("software.bernie.geckolib:geckolib-fabric-$minecraft_version:$geckolib_version")
+    modImplementation("me.shedaniel.cloth:cloth-config-fabric:$cloth_config_version") {
         exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modRuntimeOnly ("ram.talia.moreiotas:moreiotas-fabric-$minecraft_version:$moreiotas_version") { transitive = false }
+    modRuntimeOnly("maven.modrinth:complex-hex:$complexhex_version")
+    modRuntimeOnly("curse.maven:hexstructuction-1283004:$hexstruction_version")
+    modRuntimeOnly("ram.talia.hexal:hexal-fabric-$minecraft_version:$hexal_version") { transitive = false }
+    //runtimeOnly files("${rootProject.rootDir}/libs/hexical-2.0.0-e0d7ef9.jar")
+    //modRuntimeOnly("maven.modrinth:hexpose:$hexpose_version")
+    modRuntimeOnly("maven.modrinth:hexodus:$hexodus_version")
+    modRuntimeOnly("com.github.qouteall:GravityChanger:v$gravity_changer_version-mc$minecraft_version") {
+        exclude module: "modmenu"
     }
 }
 
-
 processResources {
-    // set up properties for filling into metadata
-    Map<String, Object> properties = new HashMap<>()
-    properties.put("version", version)
-    properties.put("fabric_loader_version", fabric_loader_version)
-    properties.put("fabric_api_version", fabric_api_version)
-    properties.put("minecraft_version", minecraft_version)
-    properties.put("mod_id", mod_id)
-    properties.put("mod_name", mod_name)
-    properties.put("mod_description", mod_description)
-    properties.put("license", license)
-    properties.put("source", mod_source)
-    properties.put("hexcasting_version", hexcasting_version)
-    properties.put("vs2_version", vs2_version.contains('+') ? vs2_version.substring(0, vs2_version.indexOf('+')) : vs2_version)
-    properties.forEach(inputs::property)
+    inputs.property 'version', project.version
 
-    filesMatching("fabric.mod.json") {
-        expand properties
+    filesMatching('fabric.mod.json') {
+        expand version: inputs.properties.version
     }
 }
 
 shadowJar {
-    exclude "architectury.common.json"
-
-    configurations = [project.configurations.shadowCommon]
-    archiveClassifier.set "dev-shadow"
+    configurations = [project.configurations.shadowBundle]
+    archiveClassifier = 'dev-shadow'
 }
 
 remapJar {
-    injectAccessWidener = true
-    input.set shadowJar.archiveFile
-    dependsOn shadowJar
-    archiveClassifier.set null
-}
-
-jar {
-    archiveClassifier.set "dev"
-}
-
-sourcesJar {
-    def commonSources = project(":common").sourcesJar
-    dependsOn commonSources
-    from commonSources.archiveFile.map { zipTree(it) }
-}
-
-components.java {
-    withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
-        skip()
-    }
-}
-
-publishing {
-    publications {
-        mavenFabric(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-" + project.name
-            from components.java
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-    }
+    inputFile.set shadowJar.archiveFile
 }
