--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,49 +1,35 @@
 modLoader = "kotlinforforge"
 loaderVersion = "[4,)"
 #issueTrackerURL = ""
-license = "${license}"
+license = "MIT"
 
 [[mods]]
-modId = "${mod_id}"
+modId = "hexxyskies"
 version = "${version}"
-displayName = "${mod_name}"
-authors = ["Techtastic", "walksanator"]
+displayName = "Hexxy Skies"
+authors = "Me!"
 description = '''
-${mod_description}
+This is an example description! Tell everyone what your mod is about!
 '''
-logoFile = "icon.png"
+#logoFile = ""
 
-[[dependencies.${mod_id}]]
+[[dependencies.hexxyskies]]
 modId = "forge"
 mandatory = true
 versionRange = "[47,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.${mod_id}]]
+[[dependencies.hexxyskies]]
 modId = "minecraft"
 mandatory = true
 versionRange = "[1.20.1,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.${mod_id}]]
+[[dependencies.hexxyskies]]
 modId = "architectury"
 mandatory = true
-versionRange = "[9.1.12,)"
-ordering = "AFTER"
-side = "BOTH"
-
-[[dependencies.${mod_id}]]
-modId = "valkyrienskies"
-mandatory = true
-versionRange = "[${vs2_version},)"
-ordering = "AFTER"
-side = "BOTH"
-
-[[dependencies.${mod_id}]]
-modId = "hexcasting"
-mandatory = true
-versionRange = "[${hexcasting_version},)"
+versionRange = "[9.2.14,)"
 ordering = "AFTER"
 side = "BOTH"
