--- a/doc/hexdoc.toml
+++ b/doc/hexdoc.toml
@@ -15,6 +15,7 @@ resource_dirs = [  # top takes priority
     { path="{$_forge.src}/generated/resources", required=false },
     # other hexdoc plugins
     { modid="hexcasting" },
+    { modid="hexodus" },
     { modid="minecraft" },
     { modid="hexdoc" },
 ]
@@ -24,6 +25,7 @@ export_dir = "src/hexdoc_hexxyskies/_export/generated"
 icon = "icon.png"
 include = [
     "hexxyskies",
+    "hexodus",
     "hexcasting",
     "hexdoc",
 ]
@@ -33,10 +35,21 @@ mod_name = "Hexxy Skies"
 author = "TechTastic"
 show_landing_text = true
 
+[extra.hexcasting]
+# NOTE: "!Raw" means "don't apply variable interpolation to this value"
+_pattern_regex = { "!Raw"='ACTIONS.(?P<is_per_world>register|makePerWorld)\("(?P<name>[^"]+)"\) \{ ActionRegistryEntry\(\s+HexPattern\.fromAngles\("(?P<signature>[qweasd]+)",\s*HexDir\.(?P<startdir>\w+)' }
+_per_world_value = "makePerWorld"
+
+[[extra.hexcasting.pattern_stubs]]
+path = "{$_common.kotlin}/registry/HexxySkiesPatterns.kt"
+regex = "{^_pattern_regex}"
+per_world_value = "{^_per_world_value}"
+
 # platforms
 
 [_common]
 src = "../common/src"
+kotlin = "{src}/main/kotlin/io/github/techtastic/hexxyskies"
 
 [_fabric]
 src = "../fabric/src"
