--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,13 @@ subprojects {
             // Notice: This block does NOT have the same function as the block in the top level.
             // The repositories here will be used for publishing your artifact, not for
             // retrieving dependencies.
+            maven {
+                url = uri("https://pkgs.dev.azure.com/hexxy-media/artifacts/_packaging/community/maven/v1")
+                credentials {
+                    username = "hexxy-media"
+                    password = System.getenv("MAVEN_PASSWORD")
+                }
+            }
         }
     }
 }
