--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    if: inputs.publish == 'true'
+    if: inputs.publish
     environment:
       name: publishing
     permissions:
